--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,7 @@ body {
 }
 
 .sidebar {
-    background-color: #343a40;
+    background-color: #222222;
     color: white;
     padding: 25px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
@@ -102,14 +102,28 @@ body {
     border-radius: 5px;
 }
 
+.step2 a{
+    text-decoration: none;
+    color: #4271c1;
+}
+
+.step3 a {
+    text-decoration: none;
+    color: #4271c1;
+}
+
 .card1 .step1 button {
     margin-right: 10px;
     padding: 5px 20px;
-    background-color: #007bff;
+    background-color: #dd524d;
     color: white;
     border: none;
     border-radius: 8px;
-    transition: background-color 0.3s;
+    transition: 0.3s;
+}
+
+.card1 .step1 button:hover {
+    opacity: 0.8;
 }
 
 .card1 div {
@@ -132,19 +146,30 @@ body {
     border-radius: 5px;
 }
 
+.card2 .buttons {
+    margin-left: auto;
+    margin-right: auto;
+
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+    align-content: center;
+}
+
 .card2 .buttons button {
     margin-top: 10px;
-    margin-right: 10px;
+    margin-right: 15px;
     padding: 5px 20px;
-    background-color: #007bff;
+    background-color: #dd524d;
     color: white;
     border: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
+    border-radius: 8px;
+    transition: 0.3s;
+    
 }
 
 .card2 .buttons button:hover {
-    background-color: #0056b3;
+    opacity: 0.8s;
 }
 
 button {
