added contact information, and previous school, lualhati bg sidebar

--- a/styles/index.css
+++ b/styles/index.css
@@ -14,10 +14,13 @@ body {
 
 .sidebar {
     background-color: #222222;
+    position: fixed;
+    overflow: hidden;
     color: white;
     padding: 25px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
     grid-area: sidebar;
+    z-index: 1;
 }
 
 .sidebar img {
@@ -27,6 +30,16 @@ body {
     margin-left: auto;
     margin-right: auto;
 }
+
+.sidebar img.sidebar-photo{
+    margin: 0; 
+    width: 100%; 
+    height: 100%;
+    border-radius: 0;
+    opacity: 0.6;
+}
+
+
 
 .sidebar h1 {
     color: #ffffff;
@@ -174,6 +187,10 @@ body {
 
 button {
     cursor: pointer;
+}
+
+.is-invalid {
+    border-color: red;
 }
 
 @media (max-width: 768px) {
